--- a/src/PracticingWorks/Todo/App.css
+++ b/src/PracticingWorks/Todo/App.css
@@ -25,6 +25,7 @@
   background-color: #8dc5d4;
   border: 0;
   border-radius: 40%;
+  margin: 5px;
   font-weight: bold;
   font-family: 'cwTeXYen', '微軟正黑體', 'Courier New', Courier, monospace;
   cursor: pointer;
@@ -91,6 +92,7 @@
   background-color: #8dc5d4;
   border: 0;
   border-radius: 50%;
+  margin: 1.5px;
   font-weight: bold;
   font-family: 'cwTeXYen', '微軟正黑體', 'Courier New', Courier, monospace;
   cursor: pointer;
@@ -101,6 +103,7 @@
   background-color: #8dc5d4;
   border: 0;
   border-radius: 40%;
+  margin: 1.5px;
   font-weight: bold;
   font-family: 'cwTeXYen', '微軟正黑體', 'Courier New', Courier, monospace;
   cursor: pointer;
